@@ -1,11 +1,12 @@
 package com.woowacourse.zzimkkong.controller;
 
 import com.woowacourse.zzimkkong.domain.Reservation;
-import com.woowacourse.zzimkkong.domain.Space;
-
 import com.woowacourse.zzimkkong.dto.reservation.*;
-import com.woowacourse.zzimkkong.exception.space.NoSuchSpaceException;
+import com.woowacourse.zzimkkong.repository.MapRepository;
+import com.woowacourse.zzimkkong.repository.MemberRepository;
+import com.woowacourse.zzimkkong.repository.ReservationRepository;
 import com.woowacourse.zzimkkong.repository.SpaceRepository;
+import com.woowacourse.zzimkkong.service.SlackService;
 import io.restassured.RestAssured;
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
@@ -13,113 +14,72 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
+import java.util.List;
 
+import static com.woowacourse.zzimkkong.CommonFixture.*;
 import static com.woowacourse.zzimkkong.DocumentUtils.*;
-import static com.woowacourse.zzimkkong.dto.Validator.DATE_FORMAT;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.restdocs.restassured3.RestAssuredRestDocumentation.document;
 
 public class ReservationControllerTest extends AcceptanceTest {
-    @Autowired
-    private SpaceRepository spaceRepository;
+    private static final String SALLY_PASSWORD = "1230";
+    private static final String SALLY_NAME = "샐리";
+    private static final String SALLY_DESCRIPTION = "집 가고 싶은 회의";
 
-    private LocalDate targetDate;
-    private String targetDateString;
-    private Space be;
-    private Space fe1;
-    private Reservation reservationBackEndTargetDate0To1;
-    private Reservation reservationBackEndTargetDate13To14;
-    private Reservation reservationBackEndTargetDate18To23;
-    private Reservation reservationFrontEnd1TargetDate0to1;
-    private ReservationCreateUpdateRequest reservationCreateUpdateRequestSameSpace;
-    private ReservationCreateUpdateRequest reservationCreateUpdateRequestDifferentSpace;
-    private ReservationCreateUpdateRequest reservationCreateUpdateRequestForFail;
+    @Autowired
+    private MemberRepository members;
+
+    @Autowired
+    private SpaceRepository spaces;
+
+    @Autowired
+    private MapRepository maps;
+
+    @Autowired
+    private ReservationRepository reservations;
+
+    @MockBean
+    private SlackService slackService;
+
+    private ReservationCreateUpdateRequest reservationCreateUpdateRequest;
+    private Reservation savedReservation;
 
     @BeforeEach
     void setUp() {
-        targetDate = LocalDate.now().plusDays(1L);
+        members.save(POBI); //TODO: 관련 테스트메서드 생성 시 repository 안쓰도록 수정 - 샐리
+        maps.save(LUTHER);
+        spaces.save(BE);
+        spaces.save(FE1);
 
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern(DATE_FORMAT);
-        targetDateString = targetDate.format(formatter);
+        reservationCreateUpdateRequest = new ReservationCreateUpdateRequest(
+                BE.getId(),
+                TOMORROW_START_TIME.plusHours(1),
+                TOMORROW_START_TIME.plusHours(2),
+                SALLY_PASSWORD,
+                SALLY_NAME,
+                SALLY_DESCRIPTION);
 
-        be = spaceRepository.findById(1L).orElseThrow(NoSuchSpaceException::new);
-        fe1 = spaceRepository.findById(2L).orElseThrow(NoSuchSpaceException::new);
-
-        reservationCreateUpdateRequestSameSpace = new ReservationCreateUpdateRequest(
-                1L,
-                targetDate.atTime(1, 0, 0),
-                targetDate.atTime(2, 30, 0),
-                "1234",
-                "sally",
-                "회의입니다."
-        );
-
-        reservationCreateUpdateRequestDifferentSpace = new ReservationCreateUpdateRequest(
-                2L,
-                targetDate.atTime(3, 30, 0),
-                targetDate.atTime(4, 30, 0),
-                "1234",
-                "sally",
-                "회의입니다."
-        );
-
-        reservationCreateUpdateRequestForFail = new ReservationCreateUpdateRequest(
-                1L,
-                targetDate.atTime(12, 0, 0),
-                targetDate.atTime(13, 30, 0),
-                "1234",
-                "sally",
-                "회의입니다."
-        );
-
-        reservationBackEndTargetDate0To1 = new Reservation.Builder()
-                .startTime(targetDate.atStartOfDay())
-                .endTime(targetDate.atTime(1, 0, 0))
-                .description("찜꽁 1차 회의")
-                .userName("찜꽁")
-                .password("1234")
-                .space(be)
-                .build();
-
-        reservationBackEndTargetDate13To14 = new Reservation.Builder()
-                .startTime(targetDate.atTime(13, 0, 0))
-                .endTime(targetDate.atTime(14, 0, 0))
-                .description("찜꽁 2차 회의")
-                .userName("찜꽁")
-                .password("1234")
-                .space(be)
-                .build();
-
-        reservationBackEndTargetDate18To23 = new Reservation.Builder()
-                .startTime(targetDate.atTime(18, 0, 0))
-                .endTime(targetDate.atTime(23, 59, 59))
-                .description("찜꽁 3차 회의")
-                .userName("찜꽁")
-                .password("6789")
-                .space(be)
-                .build();
-
-        reservationFrontEnd1TargetDate0to1 = new Reservation.Builder()
-                .startTime(targetDate.atStartOfDay())
-                .endTime(targetDate.atTime(1, 0, 0))
-                .description("찜꽁 5차 회의")
-                .userName("찜꽁")
-                .password("1234")
-                .space(fe1)
+        savedReservation = new Reservation.Builder()
+                .startTime(reservationCreateUpdateRequest.getStartDateTime())
+                .endTime(reservationCreateUpdateRequest.getEndDateTime())
+                .password(reservationCreateUpdateRequest.getPassword())
+                .userName(reservationCreateUpdateRequest.getName())
+                .description(reservationCreateUpdateRequest.getDescription())
+                .space(BE)
                 .build();
     }
 
     @DisplayName("예약을 등록한다.")
     @Test
     void save() {
-        //when
-        ExtractableResponse<Response> response = saveReservation(reservationCreateUpdateRequestSameSpace);
+        //given, when
+        String api = "/api/maps/" + LUTHER.getId() + "/reservations";
+        ExtractableResponse<Response> response = saveReservation(api, reservationCreateUpdateRequest);
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
@@ -129,42 +89,36 @@ public class ReservationControllerTest extends AcceptanceTest {
     @Test
     void delete() {
         //given
-        ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest = new ReservationPasswordAuthenticationRequest("1234");
+        String saveApi = "/api/maps/" + LUTHER.getId() + "/reservations";
+        ExtractableResponse<Response> saveResponse = saveReservation(saveApi, reservationCreateUpdateRequest);
+        String api = saveResponse.header("location");
 
         //when
-        final ExtractableResponse<Response> response = deleteReservation(reservationPasswordAuthenticationRequest);
+        ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest
+                = new ReservationPasswordAuthenticationRequest(SALLY_PASSWORD);
 
         //then
+        ExtractableResponse<Response> response = deleteReservation(api, reservationPasswordAuthenticationRequest);
         assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
     }
 
-    @DisplayName("잘못된 비밀번호로 예약삭제를 요청하면, 400 에러를 반환한다.")
-    @Test
-    void deleteWithWrongPassword() {
-        //given
-        ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest = new ReservationPasswordAuthenticationRequest("0987");
-
-        //when
-        final ExtractableResponse<Response> response = deleteReservation(reservationPasswordAuthenticationRequest);
-
-        //then
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
-    }
-
-    @DisplayName("map id, space id, 특정 날짜가 주어질 때 해당 맵, 해당 공간, 해당 날짜에 속하는 예약들만 조회한다.")
+    @DisplayName("map id, space id, 특정 날짜가 주어질 때 해당 맵, 해당 공간, 해당 날짜에 속하는 예약들만 찾아온다")
     @Test
     void find() {
-        //when
-        ExtractableResponse<Response> response = findReservations(1L, targetDateString);
-        ReservationFindResponse actualResponse = response.as(ReservationFindResponse.class);
+        //given
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String spaceId = String.valueOf(reservationCreateUpdateRequest.getSpaceId());
+        String api = saveResponse.header("location")
+                .replaceAll("/reservations/[0-9]", "/spaces/" + spaceId + "/reservations");
 
+        //when
+        ExtractableResponse<Response> response = findReservations(api, TOMORROW.toString());
+
+        ReservationFindResponse actualResponse = response.as(ReservationFindResponse.class);
         ReservationFindResponse expectedResponse = ReservationFindResponse.of(
-                Arrays.asList(
-                        reservationBackEndTargetDate0To1,
-                        reservationBackEndTargetDate13To14,
-                        reservationBackEndTargetDate18To23
-                )
-        );
+                Arrays.asList(savedReservation,
+                        BE_AM_ZERO_ONE,
+                        BE_PM_ONE_TWO));
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -177,18 +131,20 @@ public class ReservationControllerTest extends AcceptanceTest {
     @DisplayName("map id와 특정 날짜가 주어질 때 해당 맵, 해당 날짜의 모든 공간에 대한 예약을 조회한다.")
     @Test
     void findAll() {
-        //when
-        ExtractableResponse<Response> response = findAllReservations(targetDateString);
-        ReservationFindAllResponse actualResponse = response.as(ReservationFindAllResponse.class);
+        //given
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String api = saveResponse.header("location")
+                .replaceAll("/reservations/[0-9]", "/reservations");
 
+        //when
+        ExtractableResponse<Response> response = findAllReservations(api, TOMORROW.toString());
+
+        ReservationFindAllResponse actualResponse = response.as(ReservationFindAllResponse.class);
         ReservationFindAllResponse expectedResponse = ReservationFindAllResponse.of(
-                Arrays.asList(
-                        reservationBackEndTargetDate0To1,
-                        reservationBackEndTargetDate13To14,
-                        reservationBackEndTargetDate18To23,
-                        reservationFrontEnd1TargetDate0to1
-                )
-        );
+                List.of(savedReservation,
+                        BE_AM_ZERO_ONE,
+                        BE_PM_ONE_TWO,
+                        FE1_ZERO_ONE));
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -201,27 +157,32 @@ public class ReservationControllerTest extends AcceptanceTest {
     @DisplayName("공간 변경 없는 새로운 예약 정보가 주어지면 예약을 업데이트 한다")
     @Test
     void update_sameSpace() {
-        //when
-        ExtractableResponse<Response> updateResponse = updateReservation(reservationCreateUpdateRequestSameSpace);
-        ExtractableResponse<Response> findResponse = findReservations(
-                be.getId(),
-                targetDateString);
-        ReservationFindResponse actualResponse = findResponse.as(ReservationFindResponse.class);
+        //given
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String api = saveResponse.header("location");
 
-        ReservationFindResponse expectedResponse = ReservationFindResponse.of(
-                Arrays.asList(
-                        new Reservation.Builder()
-                                .startTime(reservationCreateUpdateRequestSameSpace.getStartDateTime())
-                                .endTime(reservationCreateUpdateRequestSameSpace.getEndDateTime())
-                                .description(reservationCreateUpdateRequestSameSpace.getDescription())
-                                .userName(reservationCreateUpdateRequestSameSpace.getName())
-                                .password(reservationCreateUpdateRequestSameSpace.getPassword())
-                                .space(be)
-                                .build(),
-                        reservationBackEndTargetDate13To14,
-                        reservationBackEndTargetDate18To23
-                )
+        ReservationCreateUpdateRequest reservationCreateUpdateRequestSameSpace = new ReservationCreateUpdateRequest(
+                reservationCreateUpdateRequest.getSpaceId(),
+                TOMORROW.atTime(1, 0, 0),
+                TOMORROW.atTime(2, 30, 0),
+                reservationCreateUpdateRequest.getPassword(),
+                "sally",
+                "회의입니다."
         );
+
+        //when
+        ExtractableResponse<Response> updateResponse = updateReservation(api, reservationCreateUpdateRequestSameSpace);
+        ExtractableResponse<Response> findResponse = findReservation(api, new ReservationPasswordAuthenticationRequest(SALLY_PASSWORD));
+
+        ReservationResponse actualResponse = findResponse.body().as(ReservationResponse.class);
+        ReservationResponse expectedResponse = ReservationResponse.of(new Reservation.Builder()
+                .startTime(reservationCreateUpdateRequestSameSpace.getStartDateTime())
+                .endTime(reservationCreateUpdateRequestSameSpace.getEndDateTime())
+                .description(reservationCreateUpdateRequestSameSpace.getDescription())
+                .userName(reservationCreateUpdateRequestSameSpace.getName())
+                .password(reservationCreateUpdateRequestSameSpace.getPassword())
+                .space(BE)
+                .build());
 
         //then
         assertThat(updateResponse.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -234,13 +195,27 @@ public class ReservationControllerTest extends AcceptanceTest {
     @DisplayName("공간 변경 있는 새로운 예약 정보가 주어지면 공간을 이동한 채로 예약을 업데이트 한다")
     @Test
     void update_spaceUpdate() {
-        //when
-        ExtractableResponse<Response> updateResponse = updateReservation(reservationCreateUpdateRequestDifferentSpace);
-        ExtractableResponse<Response> findResponse = findReservations(
-                fe1.getId(),
-                targetDateString);
-        ReservationFindResponse actualResponse = findResponse.as(ReservationFindResponse.class);
+        //given
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String api = saveResponse.header("location");
 
+        ReservationCreateUpdateRequest reservationCreateUpdateRequestDifferentSpace = new ReservationCreateUpdateRequest(
+                FE1.getId(),
+                TOMORROW.atTime(3, 30, 0),
+                TOMORROW.atTime(4, 30, 0),
+                SALLY_PASSWORD,
+                "sally",
+                "회의입니다."
+        );
+
+        //when
+        ExtractableResponse<Response> updateResponse = updateReservation(api, reservationCreateUpdateRequestDifferentSpace);
+        ExtractableResponse<Response> findResponse = findReservations(
+                api.replaceAll("/reservations/[0-9]",
+                                "/spaces/" + FE1.getId() + "/reservations"),
+                TOMORROW.toString());
+
+        ReservationFindResponse actualResponse = findResponse.as(ReservationFindResponse.class);
         ReservationFindResponse expectedResponse = ReservationFindResponse.of(
                 Arrays.asList(
                         new Reservation.Builder()
@@ -249,43 +224,33 @@ public class ReservationControllerTest extends AcceptanceTest {
                                 .description(reservationCreateUpdateRequestDifferentSpace.getDescription())
                                 .userName(reservationCreateUpdateRequestDifferentSpace.getName())
                                 .password(reservationCreateUpdateRequestDifferentSpace.getPassword())
-                                .space(fe1)
+                                .space(FE1)
                                 .build(),
-                        reservationFrontEnd1TargetDate0to1
+                        FE1_ZERO_ONE
                 )
         );
 
         //then
         assertThat(updateResponse.statusCode()).isEqualTo(HttpStatus.OK.value());
         assertThat(actualResponse).usingRecursiveComparison()
-                .ignoringCollectionOrder()
                 .ignoringExpectedNullFields()
                 .isEqualTo(expectedResponse);
     }
 
-    @DisplayName("예약 할 수 없는 조건의 정보가 주어지면 400 에러를 반환한다")
-    @Test
-    void update_fail() {
-        //when
-        ExtractableResponse<Response> updateResponse = updateReservation(reservationCreateUpdateRequestForFail);
-
-        //then
-        assertThat(updateResponse.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
-    }
-
-    @DisplayName("정확한 예약 비밀번호를 입력하면 해당 예약에 대한 정보를 반환한다")
+    @DisplayName("예약 수정 요청 시, 정확한 예약 비밀번호를 입력하면 해당 예약에 대한 정보를 반환한다")
     @Test
     void findOne() {
         //given
-        ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest = new ReservationPasswordAuthenticationRequest("1234");
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String api = saveResponse.header("location");
+        ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest
+                = new ReservationPasswordAuthenticationRequest(SALLY_PASSWORD);
 
         //when
-        ExtractableResponse<Response> response = findReservation(reservationPasswordAuthenticationRequest);
-        ReservationResponse actualResponse = response.as(ReservationResponse.class);
+        ExtractableResponse<Response> response = findReservation(api, reservationPasswordAuthenticationRequest);
 
-        ReservationResponse expectedResponse = ReservationResponse.of(
-                reservationBackEndTargetDate0To1
-        );
+        ReservationResponse actualResponse = response.as(ReservationResponse.class);
+        ReservationResponse expectedResponse = ReservationResponse.of(savedReservation);
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -294,67 +259,81 @@ public class ReservationControllerTest extends AcceptanceTest {
                 .isEqualTo(expectedResponse);
     }
 
-    private ExtractableResponse<Response> saveReservation(final ReservationCreateUpdateRequest reservationCreateUpdateRequest) {
+    private ExtractableResponse<Response> saveExampleReservations() {
+        reservations.save(BE_AM_ZERO_ONE);
+        reservations.save(BE_PM_ONE_TWO);
+        reservations.save(BE_NEXT_DAY_PM_SIX_TWELVE);
+        reservations.save(FE1_ZERO_ONE);
+
+        String api = "/api/maps/" + LUTHER.getId() + "/reservations";
+        return saveReservation(api, reservationCreateUpdateRequest);
+    }
+
+    private ExtractableResponse<Response> saveReservation(
+            final String api,
+            final ReservationCreateUpdateRequest reservationCreateUpdateRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
                 .filter(document("reservation/post", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationCreateUpdateRequest)
-                .when().post("/api/maps/1/reservations")
+                .when().post(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> deleteReservation(final ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest) {
+    private ExtractableResponse<Response> deleteReservation(
+            final String api,
+            final ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
                 .filter(document("reservation/delete", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationPasswordAuthenticationRequest)
-                .when().delete("/api/maps/1/reservations/1")
+                .when().delete(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> findReservations(final Long spaceId, final String date) {
+    private ExtractableResponse<Response> findReservations(final String api, final String date) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("*/*")
                 .filter(document("reservation/get", getRequestPreprocessor(), getResponsePreprocessor()))
-                .queryParam("date", date)
-                .when().get("/api/maps/1/spaces/" + spaceId + "/reservations")
+                .queryParams("date", date)
+                .when().get(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> findAllReservations(final String date) {
+    private ExtractableResponse<Response> findAllReservations(final String api, final String date) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("*/*")
                 .filter(document("reservation/get_all", getRequestPreprocessor(), getResponsePreprocessor()))
                 .queryParam("date", date)
-                .when().get("/api/maps/1/reservations")
+                .when().get(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> updateReservation(final ReservationCreateUpdateRequest reservationCreateUpdateRequest) {
+    private ExtractableResponse<Response> updateReservation(final String api, final ReservationCreateUpdateRequest reservationCreateUpdateRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
                 .filter(document("reservation/put", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationCreateUpdateRequest)
-                .when().put("/api/maps/1/reservations/1")
+                .when().put(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> findReservation(final ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest) {
+    private ExtractableResponse<Response> findReservation(final String api, final ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
                 .filter(document("reservation/post_for_update", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationPasswordAuthenticationRequest)
-                .when().post("/api/maps/1/reservations/1")
+                .when().post(api)
                 .then().log().all().extract();
     }
 }
